change:form-relations is a list (ul)
Form relations that show related elements to the current element are modeled as a (base) list through html itself. Javascript then appends elements to this list.

Signed-off-by: Harshvardhan Pandit <coolharsh55@gmail.com>

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <div id='form-properties'></div>
                     <hr />
                     <h3>Relations</h3>
-                    <div id='form-relations'></div>
+                    <div><ul id='form-relations'></ul></div>
                     <hr />
                 </form>
                 <p><span class='snap-right'>
