change:added multi-select with jQuery ui dialog
The multi-select field now opens a dialog with the field populated with values using using  `element.range` and with checkboxes for selecting values.

 - The values are exported and imported correctly, and also result in links in the diagram.
 - Removed unwanted comments and cleaned up the debug messages.

Signed-off-by: Harshvardhan Pandit <coolharsh55@gmail.com>

--- a/index.html
+++ b/index.html
@@ -105,6 +105,10 @@
                 </div>
             </div>
         </div>
+
+        <div id='multi-select' class='ui-widget'>
+            <h3 id='multi-select-title'>select</h3>
+            <ul id='multi-select-options'></ul>
         </div>
 
         <!-- javascript -->
