--- a/static/index.html
+++ b/static/index.html
@@ -36,16 +36,18 @@
     </head>
 
     <body>
-            <div class="ui top fixed seven item inverted menu">
-                <a id='btn-template' class='ui basic label item'><b>template</b></a>
-                <a id='btn-add-data-var' class='ui basic label item'>data variable</a>
-                <a id='btn-add-param-var' class='ui basic label item'>parameter variable</a>
-                <a id='btn-add-step' class='ui basic label item'>step</a>
-                <a id='btn-publish' class='ui basic label item' onclick="serialize_publish();">publish</a>
-                <a id='export-data' class='ui basic label item' href="" download="data.json" onclick="serialize_export();">export data</a>
-                <a id='import-data' class='ui basic label item' onclick="document.getElementById('btn-import').click();">import data</a>
-                <input id='btn-import' type="file" style="display: none;" id="input-file" name="file" enctype="multipart/form-data"/>
+        <div class="ui top fixed menu">
+            <a id='btn-template' class='ui basic  label item'><b>template</b></a>
+            <a id='btn-add-data-var' class='ui basic label item'>add data variable</a>
+            <a id='btn-add-param-var' class='ui basic label item'>add parameter variable</a>
+            <a id='btn-add-step' class='ui basic label item'>add step</a>
+            <div class="ui right menu">
+            <a id='btn-publish' class='ui basic label item' onclick="serialize_publish();">publish</a>
+            <a id='import-data' class='ui basic label item' onclick="document.getElementById('btn-import').click();">import data</a>
+            <a id='export-data' class='ui basic label item' href="" download="data.json" onclick="serialize_export();">export data</a>
+            <input id='btn-import' type="file" style="display: none;" id="input-file" name="file" enctype="multipart/form-data"/>
             </div>
+        </div>
 
         <div class="ui grid">
 
