--- a/static/sparql/sparql_query.html
+++ b/static/sparql/sparql_query.html
@@ -50,6 +50,6 @@
         <!-- semantic-ui -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.2/semantic.min.js"></script>
         <!-- sparql query -->
-        <script src="/sparql_query.js"></script>
+        <script src="/sparql/sparql_query.js"></script>
     </body>
 </html>
