inprogress workflow execution
Signed-off-by: Harshvardhan Pandit <coolharsh55@gmail.com>

--- a/static/index.html
+++ b/static/index.html
@@ -27,13 +27,14 @@
         <a class="item" data-tab="second">Execute Worklfow</a>
         <a class="item" data-tab="third">Fork Workflow</a>
     </div>
-    <div class="ui bottom attached tab segment" data-tab="first">
-        <a href="/new_workflow/"><button class="ui button">create new workflow</button></a>
+    <div class="ui bottom attached tab active segment" data-tab="first">
+        <p>Create a new experiment workflow</p>
+        <a href="/new_workflow/"><button class="ui green medium button">create new workflow</button></a>
     </div>
     <div class="ui bottom attached tab segment" data-tab="second">
         <div id='workflow-list' class="ui bulleted list"></div>
     </div>
-    <div class="ui bottom attached tab segment active" data-tab="third">
+    <div class="ui bottom attached tab segment" data-tab="third">
 
     </div>
 </div>
@@ -57,7 +58,7 @@ $(document).ready(function() {
                 class: 'item',
             });
             div.append($('<a>', {
-                href: '/workflow_execution/' + workflow,
+                href: '/execute_workflow/' + workflow,
                 text: workflow
             }));
             $('#workflow-list').append(div);
