--- a/static/workflow_template/new_workflow.html
+++ b/static/workflow_template/new_workflow.html
@@ -98,6 +98,10 @@
         <script src="http://www.jointjs.com/js/vendor/lodash/lodash.min.js"></script>
         <script src="http://www.jointjs.com/js/vendor/backbone/backbone-min.js"></script>
         <script src="http://www.jointjs.com/cms/downloads/joint.min.js"></script>
+        <!-- canvg -->
+        <script type="text/javascript" src="http://gabelerner.github.io/canvg/rgbcolor.js"></script>
+        <script type="text/javascript" src="http://gabelerner.github.io/canvg/StackBlur.js"></script>
+        <script type="text/javascript" src="http://gabelerner.github.io/canvg/canvg.js"></script>
         <!-- local files -->
         <!-- index functions and globals -->
         <script src="/workflow_template/new_workflow.js"></script>
